work on women page

--- a/Men's.html
+++ b/Men's.html
@@ -54,7 +54,7 @@
                     <div class="category">
                         <h3><ul> <li><a href="women.html">Womens collections</a></li></ul></h3>
                         <ul>
-                            <li><a href="#icone">icône</a></li>
+                            <li><a href="women.html#icone">icône</a></li>
                             <li><a href="#icone-2.0">icône 2.0</a></li>
                             <li><a href="#made-of-africa"> ⁠made of Africa </a></li>
                            
@@ -180,7 +180,7 @@
     </div>
     </div> 
     <div class="shop-content">
-      <h2>Welcome to MB-Creation</h2>
+      <h2>Welcome to MB-Creation| Men's Collection</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <img src="" alt="Signature">
     </div>
