--- a/trending.html
+++ b/trending.html
@@ -104,7 +104,7 @@
     </div>
 </header>
 
-   <!-- Hero Section avec Slider -->
+   <!-- Hero Section 
    
    <section class="hero">
     <div class="slider">
@@ -134,28 +134,30 @@
         </div>
     </div>
 
-    <!-- Navigation Dots -->
+  
     <div class="slider-nav">
         <div class="slider-dot active"></div>
         <div class="slider-dot"></div>
         <div class="slider-dot"></div>
     </div>
 
-    <!-- Prev/Next Buttons -->
+   
     <div class="slider-btn prev">
         <i class="fas fa-chevron-left"></i>
     </div>
     <div class="slider-btn next">
         <i class="fas fa-chevron-right"></i>
     </div>
+
+    avec Slider -->
 </section>
 
-
+<h1 class="trend-title">Trending</h1>
 
 
 <section class="trending">
       
-    <h1 class="trend-title">Trending</h1>     
+         
 
     <div class="container">
         <div class="main-image-wrapper image-wrapper">
