--- a/Acceuil.html
+++ b/Acceuil.html
@@ -69,7 +69,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                         </div>
                        
                         <div class="category">
-                            <h3>Trending</h3>
+                            <h3><ul> <li><a href="trending.html">Trending</a></li></ul></h3>
                             <ul>
                                 <li><a href="#">New Arrivals</a></li>
                                 <li><a href="#">Best Sellers</a></li>
