work on trending page

--- a/Men's.html
+++ b/Men's.html
@@ -70,7 +70,7 @@
                     </div>
                    
                     <div class="category">
-                        <h3>Trending</h3>
+                        <h3><ul> <li><a href="trending.html">Trending</a></li></ul></h3>
                         <ul>
                             <li><a href="#">New Arrivals</a></li>
                             <li><a href="#">Best Sellers</a></li>
@@ -250,18 +250,21 @@
             <div class="products-card">
                 <img src="assets/images/banner (1).png" alt="Produit 1" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">89.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">34.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
@@ -274,6 +277,7 @@
             <div class="products-card">
                 <img src="assets/images/trendingpic (1).png" alt="Produit 1" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
@@ -286,6 +290,7 @@
             <div class="products-card">
                 <img src="assets/images/shop3.png" alt="Produit 3" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">34.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
@@ -300,18 +305,21 @@
         <div class="products-card">
             <img src="assets/images/malepage (1).PNG" alt="Produit 1" class="products-image">
             <div class="product-name">product name</div>
+            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
             <div class="product-price">39.99€</div>
             <button class="add-to-cart">Add To Cart</button>
         </div>
         <div class="products-card">
             <img src="assets/images/malepage (2).PNG" alt="Produit  2" class="products-image">
             <div class="product-name">product name</div>
+            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
             <div class="product-price">49.99€</div>
             <button class="add-to-cart">Add To Cart</button>
         </div>
         <div class="products-card">
             <img src="assets/images/malepage (3).PNG" alt="Produit 3" class="products-image">
             <div class="product-name">product name</div>
+            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
             <div class="product-price">79.99€</div>
             <button class="add-to-cart">Add To Cart</button>
         </div>
