--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                         </ul>
                     </div>
                     <div class="category">
-                        <h3><ul> <li><a href="#">Womens collections</a></li></ul></h3>
+                        <h3><ul> <li><a href="women.html">Womens collections</a></li></ul></h3>
                         <ul>
                             <li><a href="#">icône</a></li>
                             <li><a href="#">icône 2.0</a></li>
@@ -79,7 +79,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     </div>
                    
                     <div class="category">
-                        <h3>Trending</h3>
+                        <h3><ul> <li><a href="trending.html">Trending</a></li></ul></h3>
                         <ul>
                             <li><a href="#">New Arrivals</a></li>
                             <li><a href="#">Best Sellers</a></li>
