--- a/women.html
+++ b/women.html
@@ -69,7 +69,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                         </div>
                        
                         <div class="category">
-                            <h3>Trending</h3>
+                            <h3><ul> <li><a href="trending.html">Trending</a></li></ul></h3>
                             <ul>
                                 <li><a href="#">New Arrivals</a></li>
                                 <li><a href="#">Best Sellers</a></li>
@@ -223,6 +223,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <div class="products-card">
                     <img src="assets/images/banner (1).png" alt="Produit 1" class="products-image">
                     <div class="product-name">product name</div>
+                    <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">159.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
@@ -235,6 +236,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <div class="products-card">
                     <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
                     <div class="product-name">product name</div>
+                    <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">34.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
@@ -247,6 +249,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <div class="products-card">
                     <img src="assets/images/trendingpic (1).png" alt="Produit 1" class="products-image">
                     <div class="product-name">product name</div>
+                    <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">159.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
@@ -259,6 +262,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <div class="products-card">
                     <img src="assets/images/shop3.png" alt="Produit 3" class="products-image">
                     <div class="product-name">product name</div>
+                    <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">34.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
@@ -279,12 +283,14 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             <div class="products-card">
                 <img src="assets/images/MB-Crea-pic (28).jpg" alt="Produit  2" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">49.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/about2.jpg" alt="Produit 3" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">79.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
