--- a/trending.html
+++ b/trending.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Men's Collection | MB-Creation</title>
+  <title>Trending | MB-Creation</title>
   
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,7 @@
   700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&
   family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap" rel="stylesheet"> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  
   <link rel="stylesheet" href="assets/css/trending.css">
 </head>
 <body>
@@ -70,7 +71,7 @@
                     </div>
                    
                     <div class="category">
-                        <h3>Trending</h3>
+                        <h3><ul> <li><a href="trending.html">Trending</a></li></ul></h3>
                         <ul>
                             <li><a href="#">New Arrivals</a></li>
                             <li><a href="#">Best Sellers</a></li>
@@ -104,55 +105,9 @@
     </div>
 </header>
 
-   <!-- Hero Section 
-   
-   <section class="hero">
-    <div class="slider">
-        <div class="slide active">
-            <div class="hero-content">
-                <h1>MADE OF<br>AFRICA</h1>
-                <p> our male collection</p>
-                <a href="#" class="shop-now-btn">SHOP NOW</a>
-            </div>
-            <img src="IMAGES/sellers1__3_-removebg-preview.png" alt="Fashion Model 1" >
-        </div>
-        <div class="slide">
-            <div class="hero-content">
-                <h1>Male<br>Collection</h1>
-                <p>Discover our latest amazing male collection</p>
-                <a href="#" class="shop-now-btn">DISCOVER NOW</a>
-            </div>
-            <img src="assets/images/sellers1__3_-removebg-preview.png" alt="Fashion Model 2">
-        </div>
-        <div class="slide">
-            <div class="hero-content">
-                <h1>New<br>collection 2024</h1>
-                <p></p>
-                <a href="#" class="shop-now-btn">EXPLORE NOW</a>
-            </div>
-            <img src="assets/images/sellers1__3_-removebg-preview.png" alt="Fashion Model 3" >
-        </div>
-    </div>
 
-  
-    <div class="slider-nav">
-        <div class="slider-dot active"></div>
-        <div class="slider-dot"></div>
-        <div class="slider-dot"></div>
-    </div>
 
-   
-    <div class="slider-btn prev">
-        <i class="fas fa-chevron-left"></i>
-    </div>
-    <div class="slider-btn next">
-        <i class="fas fa-chevron-right"></i>
-    </div>
 
-    avec Slider -->
-</section>
-
-<h1 class="trend-title">Trending</h1>
 
 
 <section class="trending">
@@ -198,22 +153,140 @@
 </section>
 
 
+<section class="collections">
+
+    <div class="collection">
+        <h2 class="collection-title"  id="made-of-africa">News Arrivals</h2>
+        <div class="products-grid">
+            <div class="products-card">
+                <img src="assets/images/banner (1).png" alt="Produit 1" class="products-image">
+                <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+                <div class="product-price">159.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
+                <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+                <div class="product-price">89.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
+                <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+                <div class="product-price">34.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="collection">
+        <h2 class="collection-title"  id="icone-2.0" >Best Sellers</h2>
+        <div class="products-grid">
+            <div class="products-card">
+                <img src="assets/images/trendingpic (1).png" alt="Produit 1" class="products-image">
+                <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+                <div class="product-price">159.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/trendingpic (2).png" alt="Produit 2" class="products-image">
+                <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+                <div class="product-price">89.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/shop3.png" alt="Produit 3" class="products-image">
+                <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+                <div class="product-price">34.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+        </div>
+    </div>
+    
 
 
-<h1 class="best-sellers-title">Best Sellers</h1>
-
-<div class="product-grid" id="productGrid"></div>
-
-<div id="productModal" class="modal">
-<div class="modal-content">
-    <span class="close-modal">&times;</span>
-    <img id="modalImage" src="" alt="Détail du produit" style="max-width: 100%; margin-bottom: 20px;">
-    <h2 id="modalTitle"></h2>
-    <p id="modalDescription"></p>
-    <p id="modalPrice" class="price"></p>
-    <button id="buyButton">Acheter</button>
+ <div class="collection">
+    <h2 class="collection-title" id="icone">Specials Offers</h2>
+    <div class="products-grid">
+        <div class="products-card">
+            <img src="assets/images/malepage (1).PNG" alt="Produit 1" class="products-image">
+            <div class="product-name">product name</div>
+            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+            <div class="product-price">39.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="assets/images/malepage (2).PNG" alt="Produit  2" class="products-image">
+            <div class="product-name">product name</div>
+            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+            <div class="product-price">49.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="assets/images/malepage (3).PNG" alt="Produit 3" class="products-image">
+            <div class="product-name">product name</div>
+            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
+            <div class="product-price">79.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+    </div>
 </div>
-</div>
+
+
+
+
+
+</section>
+
+
+<footer>
+    <div class="footer-content">
+        <div class="footer-column">
+            <h4>MB-CREATION®</h4>
+            <p>© 2024 MB-CREATION®<br>All Rights Reserved</p>
+        </div>
+        <div class="footer-column">
+            <h3>ABOUT US</h3>
+            <ul>
+                <li><a href="about.html">Our Story</a></li>
+                <li><a href="#">Store location</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>USEFUL LINKS</h3>
+            <ul>
+                <li><a href="#">Returns</a></li>
+                <li><a href="#">Size guide</a></li>
+                <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>FOLLOW US</h3>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>SUBSCRIBE</h3>
+            <p>Get E-mail updates about our latest shop and special offers.</p>
+            <form class="subscribe-form">
+                <input type="email" placeholder="Enter your email here.">
+                <button type="submit" class="subscribe-btn">SUBSCRIBE</button>
+            </form>
+        </div>
+    </div>
+</footer>
+
+
 
 
 <script src="assets/js/trending.js"></script>
