--- a/women.html
+++ b/women.html
@@ -256,6 +256,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <div class="products-card">
                     <img src="assets/images/trendingpic (2).png" alt="Produit 2" class="products-image">
                     <div class="product-name">product name</div>
+                    <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">89.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
