work on main page

--- a/women.html
+++ b/women.html
@@ -230,6 +230,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <div class="products-card">
                     <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
                     <div class="product-name">product name</div>
+                    <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">89.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
@@ -278,6 +279,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             <div class="products-card">
                 <img src="assets/images/hero3.png" alt="Produit 1" class="products-image">
                 <div class="product-name">product name</div>
+                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">39.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
