add terms and conditions page

--- a/Men's.html
+++ b/Men's.html
@@ -85,8 +85,7 @@
                 <ul class="dropdown">
                    
                     <li><a href="about.html">About-Us</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="Terms&Conditions.html"> FAQ , Terms & Conditions</a></li>
                 </ul>
             </li>
             <li>
