--- a/women.html
+++ b/women.html
@@ -84,8 +84,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <ul class="dropdown">
                        
                         <li><a href="about.html">About-Us</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="Terms&Conditions.html"> FAQ , Terms & Conditions</a></li>
                     </ul>
                 </li>
                 <li>
