--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -60,7 +60,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                             </ul>
                         </div>
                         <div class="category">
-                            <h3><ul> <li><a href="#">Kids Collections</a></li></ul></h3>
+                            <h3><ul> <li><a href="kids.html">Kids Collections</a></li></ul></h3>
                             <ul>
                                 <li><a href="#">made of Africa</a></li>
                                
@@ -109,7 +109,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
 <section class="container-conditions">
 
 
-    <h1>Conditions Générales d'Utilisation (CGU)</h1>
+    <h1>Terms & Conditions</h1>
 
     <section  class="termsconditions">
         <h2>1. Informations Générales</h2>
@@ -159,11 +159,48 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
     <div class="last-update">Dernière mise à jour : [Date]</div>
 
 
-
-
-
-
 </section>
+
+
+
+<div class="faqs-container">
+    <h1>FAQs</h1>
+    <p>Frequently Asked Questions.</p>
+    <p>Here are some common questions about  <span>MB-CREATION®</span></p>
+  
+    <div class="faq-item">
+      <h3>How is my price determined?</h3>
+      <div class="faq-content">
+        <!-- Add your answer here -->
+      </div>
+    </div>
+  
+    <div class="faq-item">
+      <h3>Can I get my order sooner?</h3>
+      <div class="faq-content">
+        <!-- Add your answer here -->
+      </div>
+    </div>
+
+    <div class="faq-item">
+        <h3>what is your minimum order quantity?</h3>
+        <div class="faq-content">
+          <!-- Add your answer here -->
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <h3>If i don't like my shirt, can i return them?</h3>
+        <div class="faq-content">
+          <!-- Add your answer here -->
+        </div>
+      </div>
+
+
+      
+  
+   
+  </div>
 
 
 
