--- a/Acceuil.html
+++ b/Acceuil.html
@@ -60,7 +60,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                             </ul>
                         </div>
                         <div class="category">
-                            <h3><ul> <li><a href="#">Kids Collections</a></li></ul></h3>
+                            <h3><ul> <li><a href="kids.html">Kids Collections</a></li></ul></h3>
                             <ul>
                                 <li><a href="#">made of Africa</a></li>
                                
