--- a/kids.html
+++ b/kids.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Men's Collection | MB-Creation</title>
+  <title>kid's Collection | MB-Creation</title>
   
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,7 @@
                         </ul>
                     </div>
                     <div class="category">
-                        <h3><ul> <li><a href="kids.html">Kids Collections</a></li></ul></h3>
+                        <h3><ul> <li><a href="#">Kids Collections</a></li></ul></h3>
                         <ul>
                             <li><a href="#">made of Africa</a></li>
                            
@@ -110,26 +110,26 @@
         <div class="slide active">
             <div class="hero-content">
                 <h1>MADE OF<br>AFRICA</h1>
-                <p> our male collection</p>
-                <a href="#" class="shop-now-btn">SHOP NOW</a>
+                <p> our kid's collection</p>
+                <a href="#madeofafrica" class="shop-now-btn"  >SHOP NOW</a>
             </div>
-            <img src="IMAGES/sellers1__3_-removebg-preview.png" alt="Fashion Model 1" >
+            <img src="assets/images/kids (2).png" alt="Fashion Model 1" >
         </div>
         <div class="slide">
             <div class="hero-content">
-                <h1>Male<br>Collection</h1>
-                <p>Discover our latest amazing male collection</p>
-                <a href="#" class="shop-now-btn">DISCOVER NOW</a>
+                <h1>MADE OF<br>AFRICA</h1>
+                <p>Discover our latest amazing Kids collection</p>
+                <a href="#madeofafrica" class="shop-now-btn">DISCOVER NOW</a>
             </div>
-            <img src="assets/images/sellers1__3_-removebg-preview.png" alt="Fashion Model 2">
+            <img src="assets/images/kids (2).png" alt="Fashion Model 2">
         </div>
         <div class="slide">
             <div class="hero-content">
                 <h1>New<br>collection 2024</h1>
                 <p></p>
-                <a href="#" class="shop-now-btn">EXPLORE NOW</a>
+                <a href="#madeofafrica" class="shop-now-btn">EXPLORE NOW</a>
             </div>
-            <img src="assets/images/sellers1__3_-removebg-preview.png" alt="Fashion Model 3" >
+            <img src="assets/images/kids (2).png" alt="Fashion Model 3" >
         </div>
     </div>
 
@@ -241,27 +241,27 @@
  -->
 
    
-<section class="collections">
+<section class="collections"  id="madeofafrica">
 
     <div class="collection">
         <h2 class="collection-title"  id="made-of-africa">Made Of Africa</h2>
         <div class="products-grid">
             <div class="products-card">
-                <img src="assets/images/banner (1).png" alt="Produit 1" class="products-image">
+                <img src="assets/images/kids (1).jpg" alt="Produit 1" class="products-image">
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
-                <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
+                <img src="assets/images/kids (2).jpg" alt="Produit 2" class="products-image">
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">89.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
-                <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
+                <img src="assets/images/kids (2).png" alt="Produit 3" class="products-image">
                 <div class="product-name">product name</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">34.99€</div>
@@ -270,60 +270,6 @@
         </div>
     </div>
 
-    <div class="collection">
-        <h2 class="collection-title"  id="icone-2.0" >Icone 2.0</h2>
-        <div class="products-grid">
-            <div class="products-card">
-                <img src="assets/images/trendingpic (1).png" alt="Produit 1" class="products-image">
-                <div class="product-name">product name</div>
-                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
-                <div class="product-price">159.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
-            </div>
-            <div class="products-card">
-                <img src="assets/images/trendingpic (2).png" alt="Produit 2" class="products-image">
-                <div class="product-name">product name</div>
-                <div class="product-price">89.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
-            </div>
-            <div class="products-card">
-                <img src="assets/images/shop3.png" alt="Produit 3" class="products-image">
-                <div class="product-name">product name</div>
-                <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
-                <div class="product-price">34.99€</div>
-                <button class="add-to-cart">Add To Cart</button>
-            </div>
-        </div>
-    </div>
-    
-
-
- <div class="collection">
-    <h2 class="collection-title" id="icone">Icone</h2>
-    <div class="products-grid">
-        <div class="products-card">
-            <img src="assets/images/malepage (1).PNG" alt="Produit 1" class="products-image">
-            <div class="product-name">product name</div>
-            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
-            <div class="product-price">39.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-        <div class="products-card">
-            <img src="assets/images/malepage (2).PNG" alt="Produit  2" class="products-image">
-            <div class="product-name">product name</div>
-            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
-            <div class="product-price">49.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-        <div class="products-card">
-            <img src="assets/images/malepage (3).PNG" alt="Produit 3" class="products-image">
-            <div class="product-name">product name</div>
-            <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
-            <div class="product-price">79.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-    </div>
-</div>
 
 
 
@@ -353,9 +299,9 @@
         <div class="footer-column">
             <h3>USEFUL LINKS</h3>
             <ul>
-                <li><a href="#">Returns</a></li>
+                <li><a href="Terms&Conditions.html">Returns</a></li>
                 <li><a href="#">Size guide</a></li>
-                <li><a href="#">FAQs</a></li>
+                <li><a href="Terms&Conditions.html">FAQs</a></li>
             </ul>
         </div>
 
