--- a/trending.html
+++ b/trending.html
@@ -62,7 +62,7 @@
                         </ul>
                     </div>
                     <div class="category">
-                        <h3><ul> <li><a href="#">Kids Collections</a></li></ul></h3>
+                        <h3><ul> <li><a href="kids.html">Kids Collections</a></li></ul></h3>
                         <ul>
                             <li><a href="#">made of Africa</a></li>
                            
