--- a/Men's.html
+++ b/Men's.html
@@ -93,7 +93,7 @@
                
             </li>
             <li><a href="Gallerie.html">Shooting</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="header-icons">
@@ -125,8 +125,8 @@
         </div>
         <div class="slide">
             <div class="hero-content">
-                <h1>New<br>collection 2024</h1>
-                <p></p>
+                <h1>New<br>collection 2025</h1>
+                <p>The Root Black and Root White collections, released successively in March and July 2025, mark a comeback to the fashion scene after a 2-year absence. As such, the models feature a very refined and elegant style. African fabric is combined with more sustainable materials. The blend of these two ideals aims to create timeless urban chic clothing!</p>
                 <a href="#" class="shop-now-btn">EXPLORE NOW</a>
             </div>
             <img src="assets/images/sellers1__3_-removebg-preview.png" alt="Fashion Model 3" >
