--- a/women.html
+++ b/women.html
@@ -92,7 +92,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                    
                 </li>
                 <li><a href="Gallerie.html">Shooting</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="header-icons">
@@ -116,16 +116,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 </div>
                 <img src="assets/images/MB-Crea-pic__1_-removebg-preview.png" alt="Fashion Model 1" width="480">
             </div>
-            <div class="slide">
-                <div class="hero-content">
-                    <h1>The Icon and Icon 2.0 collections</h1>
-                    <p>
-                        highlight fresh, youthful, and modernes looks suitable for both day and night, work or a party with friends. The African fabric is crafted and adapted to the environment and temperate climate
-                    </p>
-                    <a href="#" class="shop-now-btn">DISCOVER NOW</a>
-                </div>
-                <img src="assets/images/MB-Crea-pic__14_-removebg-preview.png" alt="Fashion Model 2"  width="600">
-            </div>
+           
             <div class="slide">
                 <div class="hero-content">
                     <h1> The Made of Africa</h1>
@@ -133,6 +124,17 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <a href="#" class="shop-now-btn">EXPLORE NOW</a>
                 </div>
                 <img src="assets/images/sellers1__1_-removebg-preview.png" alt="Fashion Model 3" width="450">
+            </div>
+
+            <div class="slide">
+                <div class="hero-content">
+                    <h1>New collections 2025</h1>
+                   <p>
+                    The Root Black and Root White collections, released successively in March and July 2025, mark a comeback to the fashion scene after a 2-year absence. As such, the models feature a very refined and elegant style. African fabric is combined with more sustainable materials. The blend of these two ideals aims to create timeless urban chic clothing!
+                   </p>
+                    <a href="#" class="shop-now-btn">DISCOVER NOW</a>
+                </div>
+                <img src="assets/images/MB-Crea-pic__14_-removebg-preview.png" alt="Fashion Model 2"  width="600">
             </div>
         </div>
 
