--- a/kids.html
+++ b/kids.html
@@ -93,7 +93,7 @@
                
             </li>
             <li><a href="Gallerie.html">Shooting</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="header-icons">
