--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -93,7 +93,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                    
                 </li>
                 <li><a href="Gallerie.html">Shooting</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="header-icons">
