--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -225,17 +225,17 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             <div class="footer-column">
                 <h3>USEFUL LINKS</h3>
                 <ul>
-                    <li><a href="#">Returns</a></li>
+                    <li><a href="Terms&Conditions.html">Returns</a></li>
                     <li><a href="#">Size guide</a></li>
-                    <li><a href="#">FAQs</a></li>
+                    <li><a href="Terms&Conditions.html">FAQs</a></li>
                 </ul>
             </div>
 
             <div class="footer-column">
                 <h3>FOLLOW US</h3>
                 <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/share/1BB1YvUfh1/?mibextid=LQQJ4d">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/mbcreationofficiel/profilecard/?igsh=c29zeXR1ZjdobXFo">Instagram</a></li>
                     <li><a href="#">Twitter</a></li>
                 </ul>
             </div>
