--- a/contact.html
+++ b/contact.html
@@ -141,9 +141,9 @@
       <div class="follow-us">
         <h3>Follow Us On</h3>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/share/1BB1YvUfh1/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/mbcreationofficiel/profilecard/?igsh=c29zeXR1ZjdobXFo"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
@@ -173,18 +173,18 @@
         <div class="footer-column">
             <h3>USEFUL LINKS</h3>
             <ul>
-                <li><a href="#">Returns</a></li>
+                <li><a href="Terms&Conditions.html">Returns</a></li>
                 <li><a href="#">Size guide</a></li>
-                <li><a href="#">FAQs</a></li>
+                <li><a href="Terms&Conditions.html">FAQs</a></li>
             </ul>
         </div>
 
         <div class="footer-column">
             <h3>FOLLOW US</h3>
             <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Twitter</a></li>
+                <li><a href="https://www.facebook.com/share/1BB1YvUfh1/?mibextid=LQQJ4d">Facebook</a></li>
+                <li><a href="https://www.instagram.com/mbcreationofficiel/profilecard/?igsh=c29zeXR1ZjdobXFo">Instagram</a></li>
+                <li><a href="">Twitter</a></li>
             </ul>
         </div>
         <div class="footer-column">
