--- a/kids.html
+++ b/kids.html
@@ -308,8 +308,8 @@
         <div class="footer-column">
             <h3>FOLLOW US</h3>
             <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li><a href="https://www.facebook.com/share/1BB1YvUfh1/?mibextid=LQQJ4d">Facebook</a></li>
+                <li><a href="https://www.instagram.com/mbcreationofficiel/profilecard/?igsh=c29zeXR1ZjdobXFo">Instagram</a></li>
                 <li><a href="#">Twitter</a></li>
             </ul>
         </div>
