work on mediaquery

--- a/Men's.html
+++ b/Men's.html
@@ -110,15 +110,17 @@
         <div class="slide active">
             <div class="hero-content">
                 <h1>MADE OF<br>AFRICA</h1>
-                <p> our male collection</p>
+                <p> collection focuses on summer models primarily made from premium quality African fabrics. It features Bogolan, Kente, Ndop, Tehgu, and Woodin. Here, African fabric is combined with silk and taffeta to create original and unique looks.</p>
                 <a href="#" class="shop-now-btn">SHOP NOW</a>
             </div>
             <img src="IMAGES/sellers1__3_-removebg-preview.png" alt="Fashion Model 1" >
         </div>
         <div class="slide">
             <div class="hero-content">
-                <h1>Male<br>Collection</h1>
-                <p>Discover our latest amazing male collection</p>
+                <h1>The Icon and Icon 2.0 collections</h1>
+                    <p>
+                        highlight fresh, youthful, and modernes looks suitable for both day and night, work or a party with friends. The African fabric is crafted and adapted to the environment and temperate climate
+                    </p>
                 <a href="#" class="shop-now-btn">DISCOVER NOW</a>
             </div>
             <img src="assets/images/sellers1__3_-removebg-preview.png" alt="Fashion Model 2">
