--- a/women.html
+++ b/women.html
@@ -119,7 +119,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
            
             <div class="slide">
                 <div class="hero-content">
-                    <h1> The Made of Africa</h1>
+                    <h1>  Made of Africa</h1>
                     <p> collection focuses on summer models primarily made from premium quality African fabrics. It features Bogolan, Kente, Ndop, Tehgu, and Woodin. Here, African fabric is combined with silk and taffeta to create original and unique looks.</p>
                     <a href="#" class="shop-now-btn">EXPLORE NOW</a>
                 </div>
