--- a/Men's.html
+++ b/Men's.html
@@ -55,8 +55,8 @@
                         <h3><ul> <li><a href="women.html">Womens collections</a></li></ul></h3>
                         <ul>
                             <li><a href="women.html#icone">icône</a></li>
-                            <li><a href="#icone-2.0">icône 2.0</a></li>
-                            <li><a href="#made-of-africa"> ⁠made of Africa </a></li>
+                            <li><a href="women.html#icone-2.0">icône 2.0</a></li>
+                            <li><a href="women.html#made-of-africa"> ⁠made of Africa </a></li>
                            
                         </ul>
                     </div>
