--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -45,17 +45,17 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                         <div class="category">
                             <h3><ul> <li><a href="Men's.html">Men's Collections</a></li></ul></h3>
                             <ul>
-                                <li><a href="#">icône</a></li>
-                                <li><a href="#">icône 2.0</a></li>
-                                <li><a href="#"> ⁠made of Africa </a></li>
+                                <li><a href="Men's.html#icone"  >icône</a></li>
+                                <li><a href="Men's.html#icone2.0">icône 2.0</a></li>
+                                <li><a href="Men's.html#made-of-africa"> ⁠made of Africa </a></li>
                             </ul>
                         </div>
                         <div class="category">
                             <h3><ul> <li><a href="women.html">Womens collections</a></li></ul></h3>
                             <ul>
-                                <li><a href="#">icône</a></li>
-                                <li><a href="#">icône 2.0</a></li>
-                                <li><a href="#"> ⁠made of Africa </a></li>
+                                <li><a href="women.html#icone">icône</a></li>
+                                <li><a href="women.html#icone2.0">icône 2.0</a></li>
+                                <li><a href="women.html#made-of-africa"> ⁠made of Africa </a></li>
                                
                             </ul>
                         </div>
