work on terms and conditions

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -236,7 +236,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="carrousel-content">
             <h1 class="carrousel-title">Profitez de nos reductions</h1>
             <p class="carrousel-subtitle">Des produits uniques  a des prix imbattables</p>
-            <a href="" class="btn">Explore</a>
+            <a href="trending.html" class="btn">Explore</a>
         </div>
     </div>
 
@@ -246,7 +246,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="carrousel-content">
             <h1 class="carrousel-title">Profitez de nos reductions</h1>
             <p class="carrousel-subtitle">Des produits uniques  a des prix imbattables</p>
-            <a href="" class="btn">Explore</a>
+            <a href="trending.html" class="btn">Explore</a>
         </div>
     </div>
 
@@ -256,7 +256,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="carrousel-content">
             <h1 class="carrousel-title">Profitez de nos offres</h1>
             <p class="carrousel-subtitle">Des produits uniques  a des prix imbattables</p>
-            <a href="" class="btn">Explore</a>
+            <a href="trending.html" class="btn">Explore</a>
         </div>
     </div>
    
