--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MB-CREATION</title>
+    <title>MB-CREATION |Terms&Conditions</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" href="" />
    <link rel="stylesheet" href="assets/css/Terms&Conditions.css">
@@ -112,49 +112,91 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
     <h1>Terms & Conditions</h1>
 
     <section  class="termsconditions">
-        <h2>1. Informations Générales</h2>
-        <p>Identification de l'entreprise : [Nom de votre entreprise]<br>
-        Adresse : [Adresse complète]<br>
-        Numéro de SIRET : [Numéro]<br>
-        Contact : [Email, téléphone]</p>
+        <h2>1. Introduction </h2>
+        <p>Welcome to MB-Creation! By accessing our website and purchasing our products, you agree to be bound by these terms and conditions.
+        </p>
     </section>
 
     <section class="termsconditions" >
-        <h2>2. Objet des Conditions</h2>
-        <p>Les présentes conditions régissent l'utilisation de notre plateforme de vente en ligne et définissent les droits et obligations entre [Nom de l'entreprise] et ses utilisateurs.</p>
+        <h2>2. Definitions</h2>
+        <p>- "We," "us," or "our" refers to MB-Creation.</p>
+        <p>- "You" or "your" refers to the customer or user of our website.</p>
     </section>
 
     <section  class="termsconditions" >
-        <h2>3. Processus de Commande</h2>
-        <ol>
-            <li>Sélection des produits</li>
-            <li>Vérification du panier</li>
-            <li>Identification ou création de compte</li>
-            <li>Choix du mode de livraison</li>
-            <li>Paiement</li>
-            <li>Confirmation de commande</li>
-        </ol>
+        <h2>3. Product Information</h2>
+        <p>We strive to provide accurate descriptions of our products. However, we do not guarantee that the information is error-free, complete, or current.
+        </p>
     </section>
 
     <section  class="termsconditions" >
-        <h2>4. Politique de Retour</h2>
-        <p>Délai de rétractation : 14 jours à compter de la réception<br>
-        Produits neufs, non utilisés, dans leur emballage d'origine<br>
-        Remboursement effectué sous [X] jours après réception du retour</p>
+        <h2>4. Pricing</h2>
+        <p>All prices are listed in [€] and are subject to change without prior notice. Taxes and shipping fees may apply.
+        </p>
     </section>
 
     <section class="termsconditions">
-        <h2>5. Protection des Données</h2>
-        <p>Collecte et traitement des données conformes à la RGPD<br>
-        Droit d'accès, de modification et de suppression des données personnelles</p>
+        <h2>5. Orders</h2>
+        <p>By placing an order, you are offering to purchase a product subject to these terms. We reserve the right to refuse or cancel any order for reasons including but not limited to product availability, errors in pricing, or suspected fraud.
+        </p>
     </section>
 
     <section class="termsconditions" >
-        <h2>6. Contact</h2>
-        <p>Email : [adresse]<br>
-        Téléphone : [numéro]<br>
-        Adresse postale : [adresse]</p>
+        <h2>6. Payment</h2>
+        <p>Payments can be made via credit card or instant payment . All payment information is processed securely.
+        </p>
     </section>
+
+    <section class="termsconditions" >
+        <h2>7. Shipping and Delivery</h2>
+        <p>We aim to process and ship orders within [insert time frame]. Delivery times may vary based on location. You are responsible for providing accurate shipping information.
+
+        </p>
+    </section>
+
+
+    <section class="termsconditions" >
+        <h2>8. Returns and Refunds</h2>
+        <p>We have a 2 weeks return policy. To be eligible for a return, items must be unused and in the same condition you received them. Please refer to our return policy for more details.
+
+        </p>
+    </section>
+
+    <section class="termsconditions" >
+        <h2>9. Intellectual Property</h2>
+        <p>All content on our website, including text, images, and logos, is the property of MB-Creation and is protected by copyright laws. Unauthorized use is prohibited.
+
+        </p>
+    </section>
+
+    <section class="termsconditions" >
+        <h2>10. Limitation of Liability</h2>
+        <p>MB-Creation shall not be liable for any indirect, incidental, or consequential damages arising from the use of our products or services.
+
+        </p>
+    </section>
+
+    <section class="termsconditions" >
+        <h2>11. Governing Law</h2>
+        <p>These terms and conditions shall be governed by the laws of [insert jurisdiction]. Any disputes will be resolved in the courts of [insert jurisdiction].
+
+        </p>
+    </section>
+
+
+    <section class="termsconditions" >
+        <h2>12. Changes to Terms</h2>
+        <p>We reserve the right to modify these terms and conditions at any time. Changes will be posted on our website, and your continued use of the site constitutes acceptance of those changes.
+
+        </p>
+    </section>
+
+    <section class="termsconditions" >
+        <h2>13. Contact Information</h2>
+        <p>For questions or concerns regarding these terms, please use our contact formula of our contact page
+        </p>
+    </section>
+
 
     <div class="last-update">Dernière mise à jour : [Date]</div>
 
