--- a/trending.html
+++ b/trending.html
@@ -121,7 +121,7 @@
                     Discover Our Exclusive Collection <br> Made of Africa
                 </div>
                 <button class="image-button">
-                    See More...
+                  <a href="">See More...</a>  
                 </button>
             </div>
         </div>
@@ -131,18 +131,18 @@
                     <div class="image-text">
                         New
                     </div>
-                    <button class="image-button">
-                       Discover
+                    <button class="image-button"> <a href="">
+                       Discover</a>
                     </button>
                 </div>
             </div>
             <div class="side-image image-wrapper">
                 <div class="image-overlay">
                     <div class="image-text">
-                        Specials Offers
+                      Specials Offers
                     </div>
                     <button class="image-button">
-                        Enjoy
+                        <a href=""> Enjoy</a>    
                     </button>
                 </div>
             </div>
