--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -178,7 +178,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
 
     <section class="termsconditions" >
         <h2>11. Governing Law</h2>
-        <p>These terms and conditions shall be governed by the laws of [insert jurisdiction]. Any disputes will be resolved in the courts of [insert jurisdiction].
+        <p>These terms and conditions shall be governed by the laws of [insert jurisdiction]. Any disputes will be resolved in the courts of Germany.
 
         </p>
     </section>
