Add toast notifications for cart actions, enhance cart UI with item images and removal options, and implement "Go to Cart" button. Improved styling for cart elements and added functionality to handle existing items in the cart.

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -20,6 +20,9 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
     <div class="top-banner">
         Free delivery on order over $200
     </div>
+    <div id="toast" style="display: none; position: fixed; bottom: 20px; right: 20px; background-color: #333; color: white; padding: 10px; border-radius: 5px; z-index: 1000;">
+        Article ajouté au panier !
+    </div>
 
     <header class="main-header">
 
