--- a/panier.html
+++ b/panier.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panier</title>
-    <link rel="stylesheet" href="assets/css/acceuil.css">
+    <link rel="stylesheet" href="assets/css/panier.css">
 </head>
 <body>
     <h1>Votre Panier</h1>
