Add cart functionality enhancements: Implemented a toast notification for item addition, improved cart UI with item images and removal options, and added a "Go to Cart" button. Updated styles for cart elements and integrated localStorage for persistent cart management.

--- a/Men's.html
+++ b/Men's.html
@@ -21,6 +21,9 @@
   <div class="top-banner">
     Free delivery on order over $200
 </div>
+<div id="toast" style="display: none; position: fixed; bottom: 20px; right: 20px; background-color: #333; color: white; padding: 10px; border-radius: 5px; z-index: 1000;">
+    Article ajouté au panier !
+</div>
 
 <header class="main-header">
 
@@ -99,7 +102,13 @@
     <div class="header-icons">
         <i class="fas fa-search"></i>
         <i class="fas fa-heart"></i>
-        <i class="fas fa-shopping-cart"></i>
+        <div class="cart-icon">
+            <i class="fas fa-shopping-cart"></i>
+            <span class="cart-count" id="cart-count">0</span>
+        </div>
+        <div class="cart-dropdown" style="display: none;">
+            <i class="fas fa-times close-cart" style="cursor: pointer;"></i>
+        </div>
     </div>
 </header>
 
@@ -330,6 +339,7 @@
 
 
  <script src="assets/js/men's.js"></script>
+ <script src="assets/js/main.js"></script>
 
 </body>
 </html>
