--- a/Men's.html
+++ b/Men's.html
@@ -205,14 +205,14 @@
         <div class="products-grid">
             <div class="products-card">
                 <img src="assets/images/banner (1).png" alt="Produit 1" class="products-image">
-                <div class="product-name">product name</div>
+                <div class="product-name">product name 1</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
-                <div class="product-name">product name</div>
+                <div class="product-name">product name 2</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">89.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
