--- a/kids.html
+++ b/kids.html
@@ -16,10 +16,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link rel="stylesheet" href="assets/css/men.css">
 </head>
-<body>
+<body> 
   <!-- Header -->
   <div class="top-banner">
     Free delivery on order over $200
+</div>
+<div id="toast" style="display: none; position: fixed; bottom: 20px; right: 20px; background-color: #333; color: white; padding: 10px; border-radius: 5px; z-index: 1000;"></div>
+    Article ajouté au panier !
 </div>
 
 <header class="main-header">
@@ -100,7 +103,13 @@
     <div class="header-icons">
         <i class="fas fa-search"></i>
         <i class="fas fa-heart"></i>
-        <i class="fas fa-shopping-cart"></i>
+        <div class="cart-icon">
+            <i class="fas fa-shopping-cart"></i>
+            <span class="cart-count" id="cart-count">0</span>
+        </div>
+        <div class="cart-dropdown" style="display: none;">
+            <i class="fas fa-times close-cart" style="cursor: pointer;"></i>
+        </div>
     </div>
 </header>
 
@@ -204,21 +213,21 @@
         <div class="products-grid">
             <div class="products-card">
                 <img src="assets/images/kids (1).jpg" alt="Produit 1" class="products-image">
-                <div class="product-name">product name</div>
+                <div class="product-name">product name 233</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">159.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/kids (2).jpg" alt="Produit 2" class="products-image">
-                <div class="product-name">product name</div>
+                <div class="product-name">product name12</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">89.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
             </div>
             <div class="products-card">
                 <img src="assets/images/kids (2).png" alt="Produit 3" class="products-image">
-                <div class="product-name">product name</div>
+                <div class="product-name">product name 763</div>
                 <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                 <div class="product-price">34.99€</div>
                 <button class="add-to-cart">Add To Cart</button>
