--- a/women.html
+++ b/women.html
@@ -20,6 +20,9 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
     <div class="top-banner">
         Free delivery on order over $200
     </div>
+    <div id="toast" style="display: none; position: fixed; bottom: 20px; right: 20px; background-color: #333; color: white; padding: 10px; border-radius: 5px; z-index: 1000;">
+        Article ajouté au panier !
+    </div>
 
     <header class="main-header">
 
@@ -98,8 +101,13 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="header-icons">
             <i class="fas fa-search"></i>
             <i class="fas fa-heart"></i>
-            <i class="fas fa-shopping-cart"></i>
-        </div>
+            <div class="cart-icon">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="cart-count" id="cart-count">0</span>
+            </div>
+            <div class="cart-dropdown" style="display: none;">
+                <i class="fas fa-times close-cart" style="cursor: pointer;"></i>
+            </div></div>
     </header>
 
     <!-- section hero... -->
@@ -207,21 +215,21 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             <div class="products-grid">
                 <div class="products-card">
                     <img src="assets/images/banner (1).png" alt="Produit 1" class="products-image">
-                    <div class="product-name">product name</div>
+                    <div class="product-name">product name 21</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">159.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
                 <div class="products-card">
                     <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
-                    <div class="product-name">product name</div>
+                    <div class="product-name">product name 22</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">89.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
                 </div>
                 <div class="products-card">
                     <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
-                    <div class="product-name">product name</div>
+                    <div class="product-name">product name 44</div>
                     <p class="product-description">Lorem ipsum dolor magnam obcaecati, nisi eos incidunt, explicabo libero quidem error temporibus.</p>
                     <div class="product-price">34.99€</div>
                     <button class="add-to-cart">Add To Cart</button>
