--- a/Acceuil.html
+++ b/Acceuil.html
@@ -190,11 +190,28 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
     <div class="product-modal" id="product-modal">
         <div class="modal-content">
             <span class="modal-close" id="modal-close">&times;</span>
-            <img class="modal-image" id="modal-image" src="" alt="Product Image">
-            <h2 id="modal-name"></h2>
-            <p id="modal-description"></p>
-            <p id="modal-price"></p>
-            <button id="modal-add-to-cart" class="add-to-cart">Ajouter au panier</button>
+            <div class="modal-images">
+                <div class="modal-main-image">
+                    <img id="modal-current-image" src="" alt="Image principale">
+                </div>
+                <div class="modal-thumbnails">
+                    <img class="modal-thumbnail" src="" alt="Miniature 1">
+                    <img class="modal-thumbnail" src="" alt="Miniature 2">
+                    <img class="modal-thumbnail" src="" alt="Miniature 3">
+                </div>
+                <div class="modal-nav">
+                    <button class="modal-nav-btn prev" id="modal-prev">&lt;</button>
+                    <button class="modal-nav-btn next" id="modal-next">&gt;</button>
+                </div>
+            </div>
+            <div class="modal-info">
+                <h2 id="modal-name"></h2>
+                <p class="modal-description" id="modal-description"></p>
+                <p class="modal-price" id="modal-price"></p>
+                <div class="modal-actions">
+                    <button id="modal-add-to-cart" class="add-to-cart">Ajouter au panier</button>
+                </div>
+            </div>
         </div>
     </div>
 
