--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,16 @@
     <div class="header-icons">
         <i class="fas fa-search"></i>
         <i class="fas fa-heart"></i>
-        <i class="fas fa-shopping-cart"></i>
+        <div class="cart-icon">
+            <i class="fas fa-shopping-cart"></i>
+            <span class="cart-count">0</span>
+            <div class="cart-dropdown">
+                <span class="close-cart">&times;</span>
+                <h3>Panier</h3>
+                <div id="cart-items"></div>
+                <button class="go-to-cart" disabled>Voir le panier</button>
+            </div>
+        </div>
     </div>
 </header>
 
