restructuration des styles

--- a/panier.html
+++ b/panier.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panier</title>
-    <link rel="stylesheet" href="assets/css/acceuil.css">
+   
     <link rel="stylesheet" href="assets/css/panier.css">
     <script src="https://js.stripe.com/v3/"></script>
 </head>
@@ -147,7 +147,7 @@
 
     <script src="assets/js/panier.js"></script>
     <script src="./stripe.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src=""></script>
 
 
 </body>
